// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FzStepper > Snapshots > should match snapshot - activeStep 2 1`] = `
"<!-- Desktop layout -->
<div data-v-6183ce6d="" class="fz-stepper flex flex-row gap-16">
  <div data-v-6183ce6d="" class="fz-stepper__step flex flex-col w-[156px] shrink-0 cursor-pointer py-[10px]">
    <div data-v-6183ce6d="" class="fz-stepper__progress h-[4px] rounded-[4px] w-full mb-8 bg-grey-200"></div>
    <div data-v-6183ce6d="" class="flex flex-row gap-8 items-start">
      <div data-v-6183ce6d="">
        <div data-v-6183ce6d="" class="flex items-center justify-center truncate max-w-full gap-4 size-24 rounded-full bg-grey-100 text-core-black" title="[object Object]">
          <!--v-if-->
          <p class="text-[inherit] text-sm">1</p>
          <!--v-if-->
        </div>
      </div>
      <div data-v-6183ce6d="" class="min-w-0 flex flex-col gap-[4px]"><span data-v-6183ce6d="" class="fz-stepper__title font-semibold block leading-[20px] text-core-black">Step 1</span><span data-v-6183ce6d="" class="fz-stepper__description leading-[20px]">First step description</span></div>
    </div>
  </div>
  <div data-v-6183ce6d="" class="fz-stepper__step flex flex-col w-[156px] shrink-0 cursor-pointer py-[10px]">
    <div data-v-6183ce6d="" class="fz-stepper__progress h-[4px] rounded-[4px] w-full mb-8 bg-grey-500"></div>
    <div data-v-6183ce6d="" class="flex flex-row gap-8 items-start">
      <div data-v-6183ce6d="">
        <div data-v-6183ce6d="" class="flex items-center justify-center truncate max-w-full gap-4 size-24 rounded-full bg-grey-500 text-core-white">
          <!--v-if-->
          <p class="text-[inherit] text-sm"><span data-v-6183ce6d="" role="presentation" class="flex items-center justify-center shrink-0 w-[15px] h-[15px]"><svg class="svg-inline--fa fa-check fa-sm h-[12px]" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="check" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path class="" fill="currentColor" d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"></path></svg></span></p>
          <!--v-if-->
        </div>
      </div>
      <div data-v-6183ce6d="" class="min-w-0 flex flex-col gap-[4px]"><span data-v-6183ce6d="" class="fz-stepper__title font-semibold block leading-[20px] text-core-black">Step 2</span><span data-v-6183ce6d="" class="fz-stepper__description leading-[20px]">Second step description</span></div>
    </div>
  </div>
  <div data-v-6183ce6d="" class="fz-stepper__step flex flex-col w-[156px] shrink-0 cursor-pointer py-[10px]">
    <div data-v-6183ce6d="" class="fz-stepper__progress h-[4px] rounded-[4px] w-full mb-8 bg-blue-500"></div>
    <div data-v-6183ce6d="" class="flex flex-row gap-8 items-start">
      <div data-v-6183ce6d="">
        <div data-v-6183ce6d="" class="flex items-center justify-center truncate max-w-full gap-4 size-24 rounded-full bg-blue-500 text-core-white" title="[object Object]">
          <!--v-if-->
          <p class="text-[inherit] text-sm">3</p>
          <!--v-if-->
        </div>
      </div>
      <div data-v-6183ce6d="" class="min-w-0 flex flex-col gap-[4px]"><span data-v-6183ce6d="" class="fz-stepper__title font-semibold block leading-[20px] text-core-black">Step 3</span><span data-v-6183ce6d="" class="fz-stepper__description leading-[20px]">Third step description</span></div>
    </div>
  </div>
  <div data-v-6183ce6d="" class="fz-stepper__step flex flex-col w-[156px] shrink-0 cursor-pointer py-[10px] opacity-[.2] !cursor-not-allowed">
    <div data-v-6183ce6d="" class="fz-stepper__progress h-[4px] rounded-[4px] w-full mb-8 bg-grey-200"></div>
    <div data-v-6183ce6d="" class="flex flex-row gap-8 items-start">
      <div data-v-6183ce6d="">
        <div data-v-6183ce6d="" class="flex items-center justify-center truncate max-w-full gap-4 size-24 rounded-full bg-grey-100 text-core-black" title="[object Object]">
          <!--v-if-->
          <p class="text-[inherit] text-sm">4</p>
          <!--v-if-->
        </div>
      </div>
      <div data-v-6183ce6d="" class="min-w-0 flex flex-col gap-[4px]"><span data-v-6183ce6d="" class="fz-stepper__title font-semibold block leading-[20px] text-core-black">Step 4</span><span data-v-6183ce6d="" class="fz-stepper__description leading-[20px]">Fourth step description</span></div>
    </div>
  </div>
</div>
<!-- Mobile layout -->
<!--v-if-->"
`;

exports[`FzStepper > Snapshots > should match snapshot - backoffice environment 1`] = `
"<!-- Desktop layout -->
<div data-v-6183ce6d="" class="fz-stepper flex flex-row gap-16">
  <div data-v-6183ce6d="" class="fz-stepper__step flex flex-col w-[156px] shrink-0 cursor-pointer py-[10px]">
    <div data-v-6183ce6d="" class="fz-stepper__progress h-[4px] rounded-[4px] w-full mb-8 bg-blue-500"></div>
    <div data-v-6183ce6d="" class="flex flex-row gap-8 items-start">
      <div data-v-6183ce6d="">
        <div data-v-6183ce6d="" class="flex items-center justify-center truncate max-w-full gap-4 size-24 rounded-full bg-blue-500 text-core-white" title="[object Object]">
          <!--v-if-->
          <p class="text-[inherit] text-sm">1</p>
          <!--v-if-->
        </div>
      </div>
      <div data-v-6183ce6d="" class="min-w-0 flex flex-col gap-[4px]"><span data-v-6183ce6d="" class="fz-stepper__title font-semibold block leading-[20px] text-core-black">Step 1</span><span data-v-6183ce6d="" class="fz-stepper__description leading-[20px]">First step description</span></div>
    </div>
  </div>
  <div data-v-6183ce6d="" class="fz-stepper__step flex flex-col w-[156px] shrink-0 cursor-pointer py-[10px]">
    <div data-v-6183ce6d="" class="fz-stepper__progress h-[4px] rounded-[4px] w-full mb-8 bg-grey-500"></div>
    <div data-v-6183ce6d="" class="flex flex-row gap-8 items-start">
      <div data-v-6183ce6d="">
        <div data-v-6183ce6d="" class="flex items-center justify-center truncate max-w-full gap-4 size-24 rounded-full bg-grey-500 text-core-white">
          <!--v-if-->
          <p class="text-[inherit] text-sm"><span data-v-6183ce6d="" role="presentation" class="flex items-center justify-center shrink-0 w-[15px] h-[15px]"><svg class="svg-inline--fa fa-check fa-sm h-[12px]" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="check" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path class="" fill="currentColor" d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"></path></svg></span></p>
          <!--v-if-->
        </div>
      </div>
      <div data-v-6183ce6d="" class="min-w-0 flex flex-col gap-[4px]"><span data-v-6183ce6d="" class="fz-stepper__title font-semibold block leading-[20px] text-core-black">Step 2</span><span data-v-6183ce6d="" class="fz-stepper__description leading-[20px]">Second step description</span></div>
    </div>
  </div>
  <div data-v-6183ce6d="" class="fz-stepper__step flex flex-col w-[156px] shrink-0 cursor-pointer py-[10px]">
    <div data-v-6183ce6d="" class="fz-stepper__progress h-[4px] rounded-[4px] w-full mb-8 bg-semantic-error"></div>
    <div data-v-6183ce6d="" class="flex flex-row gap-8 items-start">
      <div data-v-6183ce6d="">
        <div data-v-6183ce6d="" class="flex items-center justify-center truncate max-w-full gap-4 size-24 rounded-full bg-semantic-error-200 text-core-white">
          <!--v-if-->
          <p class="text-[inherit] text-sm"><span data-v-6183ce6d="" role="presentation" class="flex items-center justify-center shrink-0 w-[15px] h-[15px]"><svg class="svg-inline--fa fa-exclamation fa-sm h-[12px]" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="exclamation" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 512"><path class="" fill="currentColor" d="M96 64c0-17.7-14.3-32-32-32S32 46.3 32 64l0 256c0 17.7 14.3 32 32 32s32-14.3 32-32L96 64zM64 480a40 40 0 1 0 0-80 40 40 0 1 0 0 80z"></path></svg></span></p>
          <!--v-if-->
        </div>
      </div>
      <div data-v-6183ce6d="" class="min-w-0 flex flex-col gap-[4px]"><span data-v-6183ce6d="" class="fz-stepper__title font-semibold block leading-[20px] text-semantic-error">Step 3</span><span data-v-6183ce6d="" class="fz-stepper__description leading-[20px]">Third step description</span></div>
    </div>
  </div>
  <div data-v-6183ce6d="" class="fz-stepper__step flex flex-col w-[156px] shrink-0 cursor-pointer py-[10px] opacity-[.2] !cursor-not-allowed">
    <div data-v-6183ce6d="" class="fz-stepper__progress h-[4px] rounded-[4px] w-full mb-8 bg-grey-200"></div>
    <div data-v-6183ce6d="" class="flex flex-row gap-8 items-start">
      <div data-v-6183ce6d="">
        <div data-v-6183ce6d="" class="flex items-center justify-center truncate max-w-full gap-4 size-24 rounded-full bg-grey-100 text-core-black" title="[object Object]">
          <!--v-if-->
          <p class="text-[inherit] text-sm">4</p>
          <!--v-if-->
        </div>
      </div>
      <div data-v-6183ce6d="" class="min-w-0 flex flex-col gap-[4px]"><span data-v-6183ce6d="" class="fz-stepper__title font-semibold block leading-[20px] text-core-black">Step 4</span><span data-v-6183ce6d="" class="fz-stepper__description leading-[20px]">Fourth step description</span></div>
    </div>
  </div>
</div>
<!-- Mobile layout -->
<!--v-if-->"
`;

exports[`FzStepper > Snapshots > should match snapshot - default state 1`] = `
"<!-- Desktop layout -->
<div data-v-6183ce6d="" class="fz-stepper flex flex-row gap-16">
  <div data-v-6183ce6d="" class="fz-stepper__step flex flex-col w-[156px] shrink-0 cursor-pointer py-[10px]">
    <div data-v-6183ce6d="" class="fz-stepper__progress h-[4px] rounded-[4px] w-full mb-8 bg-blue-500"></div>
    <div data-v-6183ce6d="" class="flex flex-row gap-8 items-start">
      <div data-v-6183ce6d="">
        <div data-v-6183ce6d="" class="flex items-center justify-center truncate max-w-full gap-4 size-24 rounded-full bg-blue-500 text-core-white" title="[object Object]">
          <!--v-if-->
          <p class="text-[inherit] text-sm">1</p>
          <!--v-if-->
        </div>
      </div>
      <div data-v-6183ce6d="" class="min-w-0 flex flex-col gap-[4px]"><span data-v-6183ce6d="" class="fz-stepper__title font-semibold block leading-[20px] text-core-black">Step 1</span><span data-v-6183ce6d="" class="fz-stepper__description leading-[20px]">First step description</span></div>
    </div>
  </div>
  <div data-v-6183ce6d="" class="fz-stepper__step flex flex-col w-[156px] shrink-0 cursor-pointer py-[10px]">
    <div data-v-6183ce6d="" class="fz-stepper__progress h-[4px] rounded-[4px] w-full mb-8 bg-grey-500"></div>
    <div data-v-6183ce6d="" class="flex flex-row gap-8 items-start">
      <div data-v-6183ce6d="">
        <div data-v-6183ce6d="" class="flex items-center justify-center truncate max-w-full gap-4 size-24 rounded-full bg-grey-500 text-core-white">
          <!--v-if-->
          <p class="text-[inherit] text-sm"><span data-v-6183ce6d="" role="presentation" class="flex items-center justify-center shrink-0 w-[15px] h-[15px]"><svg class="svg-inline--fa fa-check fa-sm h-[12px]" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="check" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path class="" fill="currentColor" d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"></path></svg></span></p>
          <!--v-if-->
        </div>
      </div>
      <div data-v-6183ce6d="" class="min-w-0 flex flex-col gap-[4px]"><span data-v-6183ce6d="" class="fz-stepper__title font-semibold block leading-[20px] text-core-black">Step 2</span><span data-v-6183ce6d="" class="fz-stepper__description leading-[20px]">Second step description</span></div>
    </div>
  </div>
  <div data-v-6183ce6d="" class="fz-stepper__step flex flex-col w-[156px] shrink-0 cursor-pointer py-[10px]">
    <div data-v-6183ce6d="" class="fz-stepper__progress h-[4px] rounded-[4px] w-full mb-8 bg-semantic-error"></div>
    <div data-v-6183ce6d="" class="flex flex-row gap-8 items-start">
      <div data-v-6183ce6d="">
        <div data-v-6183ce6d="" class="flex items-center justify-center truncate max-w-full gap-4 size-24 rounded-full bg-semantic-error-200 text-core-white">
          <!--v-if-->
          <p class="text-[inherit] text-sm"><span data-v-6183ce6d="" role="presentation" class="flex items-center justify-center shrink-0 w-[15px] h-[15px]"><svg class="svg-inline--fa fa-exclamation fa-sm h-[12px]" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="exclamation" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 512"><path class="" fill="currentColor" d="M96 64c0-17.7-14.3-32-32-32S32 46.3 32 64l0 256c0 17.7 14.3 32 32 32s32-14.3 32-32L96 64zM64 480a40 40 0 1 0 0-80 40 40 0 1 0 0 80z"></path></svg></span></p>
          <!--v-if-->
        </div>
      </div>
      <div data-v-6183ce6d="" class="min-w-0 flex flex-col gap-[4px]"><span data-v-6183ce6d="" class="fz-stepper__title font-semibold block leading-[20px] text-semantic-error">Step 3</span><span data-v-6183ce6d="" class="fz-stepper__description leading-[20px]">Third step description</span></div>
    </div>
  </div>
  <div data-v-6183ce6d="" class="fz-stepper__step flex flex-col w-[156px] shrink-0 cursor-pointer py-[10px] opacity-[.2] !cursor-not-allowed">
    <div data-v-6183ce6d="" class="fz-stepper__progress h-[4px] rounded-[4px] w-full mb-8 bg-grey-200"></div>
    <div data-v-6183ce6d="" class="flex flex-row gap-8 items-start">
      <div data-v-6183ce6d="">
        <div data-v-6183ce6d="" class="flex items-center justify-center truncate max-w-full gap-4 size-24 rounded-full bg-grey-100 text-core-black" title="[object Object]">
          <!--v-if-->
          <p class="text-[inherit] text-sm">4</p>
          <!--v-if-->
        </div>
      </div>
      <div data-v-6183ce6d="" class="min-w-0 flex flex-col gap-[4px]"><span data-v-6183ce6d="" class="fz-stepper__title font-semibold block leading-[20px] text-core-black">Step 4</span><span data-v-6183ce6d="" class="fz-stepper__description leading-[20px]">Fourth step description</span></div>
    </div>
  </div>
</div>
<!-- Mobile layout -->
<!--v-if-->"
`;

exports[`FzStepper > Snapshots > should match snapshot - forceMobile 1`] = `
"<!-- Desktop layout -->
<!--v-if-->
<!-- Mobile layout -->
<div data-v-6183ce6d="" class="fz-stepper flex flex-col w-full gap-8">
  <div data-v-6183ce6d="" class="flex flex-row gap-8">
    <div data-v-6183ce6d="" class="fz-stepper__progress h-[4px] rounded-[4px] w-full mb-8 bg-blue-500"></div>
    <div data-v-6183ce6d="" class="fz-stepper__progress h-[4px] rounded-[4px] w-full mb-8 bg-grey-500"></div>
    <div data-v-6183ce6d="" class="fz-stepper__progress h-[4px] rounded-[4px] w-full mb-8 bg-semantic-error"></div>
    <div data-v-6183ce6d="" class="fz-stepper__progress h-[4px] rounded-[4px] w-full mb-8 bg-grey-200"></div>
  </div><!-- With step navigation dropdown -->
  <div data-v-6183ce6d="" class="flex flex-row gap-8 items-center">
    <div data-v-6183ce6d="">
      <div data-v-6183ce6d="" class="flex items-center justify-center truncate max-w-full gap-4 size-24 rounded-full bg-blue-500 text-core-white" title="[object Object]">
        <!--v-if-->
        <p class="text-[inherit] text-sm">1</p>
        <!--v-if-->
      </div>
    </div>
    <div data-v-6183ce6d="" class="fz-stepper__dropdown grow flex">
      <div class="inline-flex w-full sm:w-auto">
        <div data-v-6183ce6d="" class="flex flex-col grow cursor-pointer">
          <div data-v-6183ce6d="" class="flex flex-row size-full justify-between items-center cursor-pointer"><span data-v-6183ce6d="" class="font-medium grow text-core-black">Step 1</span><span data-v-6183ce6d="" role="presentation" class="flex items-center justify-center shrink-0 w-[25px] h-[25px] ml-4"><svg class="svg-inline--fa fa-angle-down fa-lg h-[20px]" aria-hidden="true" focusable="false" data-prefix="far" data-icon="angle-down" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path class="" fill="currentColor" d="M241 369c-9.4 9.4-24.6 9.4-33.9 0L47 209c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l143 143L367 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9L241 369z"></path></svg></span></div><span data-v-6183ce6d="" class="text-sm">First step description</span>
        </div>
      </div>
      <!--v-if-->
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </div>
</div>"
`;

exports[`FzStepper > Snapshots > should match snapshot - hasStepbar false 1`] = `
"<!-- Desktop layout -->
<div data-v-6183ce6d="" class="fz-stepper flex flex-row gap-16">
  <div data-v-6183ce6d="" class="fz-stepper__step flex flex-col w-[156px] shrink-0 cursor-pointer py-[10px]">
    <!--v-if-->
    <div data-v-6183ce6d="" class="flex flex-row gap-8 items-start">
      <div data-v-6183ce6d="">
        <div data-v-6183ce6d="" class="flex items-center justify-center truncate max-w-full gap-4 size-24 rounded-full bg-blue-500 text-core-white" title="[object Object]">
          <!--v-if-->
          <p class="text-[inherit] text-sm">1</p>
          <!--v-if-->
        </div>
      </div>
      <div data-v-6183ce6d="" class="min-w-0 flex flex-col gap-[4px]"><span data-v-6183ce6d="" class="fz-stepper__title font-semibold block leading-[20px] text-core-black">Step 1</span><span data-v-6183ce6d="" class="fz-stepper__description leading-[20px]">First step description</span></div>
    </div>
  </div>
  <div data-v-6183ce6d="" class="fz-stepper__step flex flex-col w-[156px] shrink-0 cursor-pointer py-[10px]">
    <!--v-if-->
    <div data-v-6183ce6d="" class="flex flex-row gap-8 items-start">
      <div data-v-6183ce6d="">
        <div data-v-6183ce6d="" class="flex items-center justify-center truncate max-w-full gap-4 size-24 rounded-full bg-grey-500 text-core-white">
          <!--v-if-->
          <p class="text-[inherit] text-sm"><span data-v-6183ce6d="" role="presentation" class="flex items-center justify-center shrink-0 w-[15px] h-[15px]"><svg class="svg-inline--fa fa-check fa-sm h-[12px]" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="check" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path class="" fill="currentColor" d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"></path></svg></span></p>
          <!--v-if-->
        </div>
      </div>
      <div data-v-6183ce6d="" class="min-w-0 flex flex-col gap-[4px]"><span data-v-6183ce6d="" class="fz-stepper__title font-semibold block leading-[20px] text-core-black">Step 2</span><span data-v-6183ce6d="" class="fz-stepper__description leading-[20px]">Second step description</span></div>
    </div>
  </div>
  <div data-v-6183ce6d="" class="fz-stepper__step flex flex-col w-[156px] shrink-0 cursor-pointer py-[10px]">
    <!--v-if-->
    <div data-v-6183ce6d="" class="flex flex-row gap-8 items-start">
      <div data-v-6183ce6d="">
        <div data-v-6183ce6d="" class="flex items-center justify-center truncate max-w-full gap-4 size-24 rounded-full bg-semantic-error-200 text-core-white">
          <!--v-if-->
          <p class="text-[inherit] text-sm"><span data-v-6183ce6d="" role="presentation" class="flex items-center justify-center shrink-0 w-[15px] h-[15px]"><svg class="svg-inline--fa fa-exclamation fa-sm h-[12px]" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="exclamation" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 512"><path class="" fill="currentColor" d="M96 64c0-17.7-14.3-32-32-32S32 46.3 32 64l0 256c0 17.7 14.3 32 32 32s32-14.3 32-32L96 64zM64 480a40 40 0 1 0 0-80 40 40 0 1 0 0 80z"></path></svg></span></p>
          <!--v-if-->
        </div>
      </div>
      <div data-v-6183ce6d="" class="min-w-0 flex flex-col gap-[4px]"><span data-v-6183ce6d="" class="fz-stepper__title font-semibold block leading-[20px] text-semantic-error">Step 3</span><span data-v-6183ce6d="" class="fz-stepper__description leading-[20px]">Third step description</span></div>
    </div>
  </div>
  <div data-v-6183ce6d="" class="fz-stepper__step flex flex-col w-[156px] shrink-0 cursor-pointer py-[10px] opacity-[.2] !cursor-not-allowed">
    <!--v-if-->
    <div data-v-6183ce6d="" class="flex flex-row gap-8 items-start">
      <div data-v-6183ce6d="">
        <div data-v-6183ce6d="" class="flex items-center justify-center truncate max-w-full gap-4 size-24 rounded-full bg-grey-100 text-core-black" title="[object Object]">
          <!--v-if-->
          <p class="text-[inherit] text-sm">4</p>
          <!--v-if-->
        </div>
      </div>
      <div data-v-6183ce6d="" class="min-w-0 flex flex-col gap-[4px]"><span data-v-6183ce6d="" class="fz-stepper__title font-semibold block leading-[20px] text-core-black">Step 4</span><span data-v-6183ce6d="" class="fz-stepper__description leading-[20px]">Fourth step description</span></div>
    </div>
  </div>
</div>
<!-- Mobile layout -->
<!--v-if-->"
`;

exports[`FzStepper > Snapshots > should match snapshot - mobile without stepper list 1`] = `
"<!-- Desktop layout -->
<!--v-if-->
<!-- Mobile layout -->
<div data-v-6183ce6d="" class="fz-stepper flex flex-col w-full gap-8">
  <div data-v-6183ce6d="" class="flex flex-row gap-8">
    <div data-v-6183ce6d="" class="fz-stepper__progress h-[4px] rounded-[4px] w-full mb-8 bg-blue-500"></div>
    <div data-v-6183ce6d="" class="fz-stepper__progress h-[4px] rounded-[4px] w-full mb-8 bg-grey-500"></div>
    <div data-v-6183ce6d="" class="fz-stepper__progress h-[4px] rounded-[4px] w-full mb-8 bg-semantic-error"></div>
    <div data-v-6183ce6d="" class="fz-stepper__progress h-[4px] rounded-[4px] w-full mb-8 bg-grey-200"></div>
  </div><!-- With step navigation dropdown -->
  <!-- Without step navigation (hasStepperList = false) -->
  <div data-v-6183ce6d="" class="flex flex-row gap-8 items-center">
    <div data-v-6183ce6d="">
      <div data-v-6183ce6d="" class="flex items-center justify-center truncate max-w-full gap-4 size-24 rounded-full bg-blue-500 text-core-white" title="[object Object]">
        <!--v-if-->
        <p class="text-[inherit] text-sm">1</p>
        <!--v-if-->
      </div>
    </div>
    <div data-v-6183ce6d="" class="flex flex-col grow min-w-0"><span data-v-6183ce6d="" class="font-medium text-core-black">Step 1</span><span data-v-6183ce6d="" class="text-sm">First step description</span></div>
  </div>
</div>"
`;
